# dz

./: .flake8  .gitignore  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: confest.py  test_masks.py  test_processing.py  test_widget.py
